Fixed Dashboard Alignment

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,12 @@ li span{
 
 .statisticsBarGraph{
     float: left;
-    width: 80%;
-    height: 250;
+    height: 50vh;
+    width: 100%;
+}
+
+.worldMap{
+    border-radius: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    float: left;
 }
